Ignoring build files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+lib/
 CppUnit/.dep/
 Foundation/.dep/
 Foundation/samples/ActiveMethod/.dep/
@@ -44,3 +45,90 @@ XML/samples/DOMWriter/.dep/
 XML/samples/PrettyPrint/.dep/
 XML/samples/SAXParser/.dep/
 XML/testsuite/.dep/
+CppUnit/obj/
+Foundation/obj/
+Foundation/samples/ActiveMethod/bin/
+Foundation/samples/ActiveMethod/obj/
+Foundation/samples/Activity/bin/
+Foundation/samples/Activity/obj/
+Foundation/samples/BinaryReaderWriter/bin/
+Foundation/samples/BinaryReaderWriter/obj/
+Foundation/samples/DateTime/bin/
+Foundation/samples/DateTime/obj/
+Foundation/samples/Logger/bin/
+Foundation/samples/Logger/obj/
+Foundation/samples/NotificationQueue/bin/
+Foundation/samples/NotificationQueue/obj/
+Foundation/samples/StringTokenizer/bin/
+Foundation/samples/StringTokenizer/obj/
+Foundation/samples/Timer/bin/
+Foundation/samples/Timer/obj/
+Foundation/samples/URI/bin/
+Foundation/samples/URI/obj/
+Foundation/samples/base64decode/bin/
+Foundation/samples/base64decode/obj/
+Foundation/samples/base64encode/bin/
+Foundation/samples/base64encode/obj/
+Foundation/samples/deflate/bin/
+Foundation/samples/deflate/obj/
+Foundation/samples/dir/bin/
+Foundation/samples/dir/obj/
+Foundation/samples/grep/bin/
+Foundation/samples/grep/obj/
+Foundation/samples/hmacmd5/bin/
+Foundation/samples/hmacmd5/obj/
+Foundation/samples/inflate/bin/
+Foundation/samples/inflate/obj/
+Foundation/samples/md5/bin/
+Foundation/samples/md5/obj/
+Foundation/samples/uuidgen/bin/
+Foundation/samples/uuidgen/obj/
+Foundation/testsuite/bin/
+Foundation/testsuite/obj/
+Net/obj/
+Net/samples/EchoServer/bin/
+Net/samples/EchoServer/obj/
+Net/samples/HTTPFormServer/bin/
+Net/samples/HTTPFormServer/obj/
+Net/samples/HTTPLoadTest/bin/
+Net/samples/HTTPLoadTest/obj/
+Net/samples/HTTPTimeServer/bin/
+Net/samples/HTTPTimeServer/obj/
+Net/samples/Mail/bin/
+Net/samples/Mail/obj/
+Net/samples/Ping/bin/
+Net/samples/Ping/obj/
+Net/samples/TimeServer/bin/
+Net/samples/TimeServer/obj/
+Net/samples/TwitterClient/bin/
+Net/samples/TwitterClient/obj/
+Net/samples/WebSocketServer/bin/
+Net/samples/WebSocketServer/obj/
+Net/samples/dict/bin/
+Net/samples/dict/obj/
+Net/samples/download/bin/
+Net/samples/download/obj/
+Net/samples/httpget/bin/
+Net/samples/httpget/obj/
+Net/testsuite/bin/
+Net/testsuite/obj/
+Util/obj/
+Util/samples/SampleApp/bin/
+Util/samples/SampleApp/obj/
+Util/samples/SampleServer/bin/
+Util/samples/SampleServer/obj/
+Util/samples/pkill/bin/
+Util/samples/pkill/obj/
+Util/testsuite/bin/
+Util/testsuite/obj/
+XML/obj/
+XML/samples/DOMParser/bin/
+XML/samples/DOMParser/obj/
+XML/samples/DOMWriter/bin/
+XML/samples/DOMWriter/obj/
+XML/samples/PrettyPrint/bin/
+XML/samples/PrettyPrint/obj/
+XML/samples/SAXParser/bin/
+XML/samples/SAXParser/obj/
+XML/testsuite/bin/
+XML/testsuite/obj/
